# modern-python-dev-setup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
hooks/: post_gen_project.py
scripts/: install_hooks.sh
src/my_package/: main.py  my_cli.py  rich_demo.py
src/{{cookiecutter.project_slug}}/: main.py  my_cli.py  rich_demo.py
tests/: test_main.py
